# apply-daemon

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  migration.md  profile_outline_and_upgrade.md  pyproject.toml  script.sh
.github/workflows/: ci.yml
docs/: AUDIT.md  CHATOPS.md  EVAL_GUIDE.md  MODELS.md  PROJECT_BRIEFING.md  PROXY.md  test_coverage_summary.md
eval/: eval.py  eval_example.csv
my_profile_example/: base_resume.docx  cover_letter.md  profile.md  search_config.yaml
src/: audit_log.py  batch_process.py  compile.py  db.py  digest.py  email_classifier.py  email_fetcher.py  expired_probe.py  file_utils.py  geo.py  integration_test.py  jobspy_ingest.py  mismatch_gate.py  models.py  notifications.py  pipeline.py  process_queue.py  profile_loader.py  proxy_manager.py  proxy_test.py  report.py  research.py  sweeper.py  tailor.py  text_extractor.py  triage.py
tests/: test_audit_log.py  test_batch_edge_cases.py  test_batch_process.py  test_compile.py  test_db.py  test_digest.py  test_email_classifier.py  test_expired_probe.py  test_file_utils.py  test_geo.py  test_idempotency.py  test_integration_test.py  test_jobspy_ingest.py  test_mismatch_gate.py  test_notifications.py  test_process_queue.py  test_profile_loader.py  test_proxy_manager.py  test_research.py  test_sweeper.py  test_tailor.py  test_text_extractor.py  test_triage.py
